--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,10 @@ compileTestJava {
 
 dependencies {
     // Selenide
-    testImplementation("com.codeborne:selenide:5.25.1")
+    testImplementation("com.codeborne:selenide:6.3.2")
     testRuntimeOnly("org.slf4j:slf4j-simple:1.7.32")
+
+    testRuntimeOnly("com.browserup:browserup-proxy-core:2.1.1")
 
 
     // JUnit 5
